--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "around-express",
-  "version": "1.0.0",
-  "description": "Around the U.S. back end",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint . --fix",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JakobOrion/around-express.git"
-  },
-  "author": "Jakob Bohn",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JakobOrion/around-express/issues"
-  },
-  "homepage": "https://github.com/JakobOrion/around-express#readme",
-  "devDependencies": {
-    "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-config-airbnb": "latest",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.3",
-    "nodemon": "^2.0.19",
-    "prettier": "^2.7.1"
-  },
-  "dependencies": {
-    "express": "^4.18.1",
-    "helmet": "^6.0.0",
-    "mongoose": "^6.6.1"
-  }
+    "name": "around-express",
+    "version": "1.0.0",
+    "description": "Around the U.S. back end",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint": "npx eslint . --fix",
+        "start": "node app.js",
+        "dev": "nodemon app.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/JakobOrion/around-express.git"
+    },
+    "author": "Jakob Bohn",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/JakobOrion/around-express/issues"
+    },
+    "homepage": "https://github.com/JakobOrion/around-express#readme",
+    "devDependencies": {
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb": "latest",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.25.3",
+        "nodemon": "^2.0.19",
+        "prettier": "^2.7.1"
+    },
+    "dependencies": {
+        "express": "^4.18.1",
+        "helmet": "^6.0.0",
+        "mongoose": "^6.6.1"
+    }
 }
