--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,7 @@
     },
     "devDependencies": {
         "babel-eslint": "^10.1.0",
-        "eslint": "^7.32.0 || ^8.2.0",
+        "eslint": "^8.2.0",
         "eslint-config-airbnb": "latest",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.25.3",
