--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "express": "^4.18.1",
         "helmet": "^6.0.0",
-        "mongoose": "^6.6.1"
+        "mongoose": "^6.6.1",
+        "validator": "^13.9.0"
     }
 }
