--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
         "prettier": "^2.7.1"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "express": "^4.18.1",
         "helmet": "^6.0.0",
         "mongoose": "^6.6.1",
