--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
         "bcryptjs": "^2.4.3",
         "express": "^4.18.1",
         "helmet": "^6.0.0",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.6.1",
         "validator": "^13.9.0"
     }
